--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 layout: default
 ---
 
-<!-- This loops through the paginated posts -->
-{% for post in paginator.posts %}
+<!-- 显示所有文章 -->
+{% for post in site.posts %}
   {% include post.html post=post content=post.content %}
 {% endfor %}
-
-{% if paginator.total_pages > 1 %}
-    {% include pagination.html maxPages=5 %}
-{% endif %}
