feat: 切换为 Minimal Mistakes 主题，支持评论互动

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 ---
-layout: default
+layout: home
+author_profile: true
 ---
-
-<!-- 显示所有文章 -->
-{% for post in site.posts %}
-  {% include post.html post=post content=post.content %}
-{% endfor %}
